<resources>
    <string name="app_name">Healthy App</string>
    <string name="str_imagen">Imagen</string>
    <string name="str_login">Login</string>
    <string name="str_logout">Cerrar sesión</string>
    <string name="str_ingrese_usuario">Ingrese usuario</string>
    <string name="str_ingrese_contrasenia">Ingrese contraseña</string>
    <string name="str_no_puedes_ingresar">¿No puedes ingresar?</string>
    <string name="str_comunicate"><u>Contáctanos</u></string>
    <string name="str_ingresar">Ingresar</string>
    <string name="str_contact_center">Contact Center</string>
    <string name="str_llamanos">Llámanos</string>
    <string name="str_escribenos">Escríbenos</string>
    <string name="mail_invalido">Ingrese un correo valido</string>
    <string name="password_invalido">Ingrese una contraseña valida</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_info_personal">Info Personal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>