<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite2"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/ly_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@drawable/sh_backgroun_login"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/heartlogo2"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="HEALTHY APP"
                    android:textColor="@color/colorSkyBlue0"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="Login"
                    android:textColor="@color/colorWhite0"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dim_18dp"
        android:layout_marginRight="@dimen/dim_18dp"
        android:layout_weight="0.4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/dim_50dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                app:cardBackgroundColor="@color/colorWhite0"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/baseline_person_grey_600_24dp"
                        android:drawablePadding="12dp"
                        android:hint="@string/str_ingrese_usuario"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="50dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_10dp"
                android:background="@android:color/transparent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                app:cardBackgroundColor="@color/colorWhite0"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/baseline_vpn_key_grey_600_24dp"
                        android:drawablePadding="12dp"
                        android:hint="@string/str_ingrese_contrasenia"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="50dp"
                        android:autofillHints="" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@id/ly_olvido_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dim_2dp"
                    android:gravity="end|center"
                    android:text="@string/str_no_puedes_ingresar"
                    android:textSize="@dimen/dim_text_size_15" />

                <Button
                    android:id="@id/btn_comunicate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim_4dp"
                    android:layout_marginBottom="@dimen/dim_2dp"
                    android:background="@android:color/transparent"
                    android:gravity="start|center"
                    android:text="@string/str_comunicate"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/dim_text_size_15" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="start"
            android:orientation="vertical">

            <Button
                android:id="@id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/custom_button_selector"
                android:gravity="center"
                android:text="@string/str_ingresar"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite0"
                android:textSize="@dimen/dim_text_size_17"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/pb_login"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/dim_12dp">

        <TextView
            android:id="@+id/tv_coperray_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/dim_5dp"
            android:textColor="@color/colorGrey0"
            android:textSize="@dimen/dim_text_size_13" />

    </LinearLayout>
</LinearLayout>