<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ContactUsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_comunicate"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dim_34dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/dim_80dp"
                />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/drw_background_contact"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dim_60dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_contact_person" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dim_5dp"
                android:gravity="center"
                android:paddingTop="@dimen/dim_5dp"
                android:text="@string/str_contact_center"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dim_text_size_20" />

            <TextView
                android:id="@+id/tv_cuerpo_mensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dim_20dp"
                android:layout_marginTop="@dimen/dim_8dp"
                android:layout_marginRight="@dimen/dim_20dp"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:padding="@dimen/dim_20dp"
                android:textColor="@color/colorBlack2"
                android:textSize="@dimen/dim_text_size_15" />

            <TextView
                android:id="@+id/tv_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dim_20dp"
                android:layout_marginTop="@dimen/dim_8dp"
                android:layout_marginRight="@dimen/dim_20dp"
                android:gravity="center"
                android:justificationMode="inter_word"
                android:textColor="@color/colorBlack2"
                android:textSize="@dimen/dim_text_size_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_llamanos"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dim_10dp"
                android:background="@color/colorWhite1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="1dp"
                app:cardElevation="@dimen/dim_3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_call_contact" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_llamanos"
                        android:textSize="@dimen/dim_text_size_16" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_escribenos"
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dim_10dp"
                android:background="@color/colorWhite1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="1dp"
                app:cardElevation="@dimen/dim_3dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_whatsapp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_escribenos"
                        android:textSize="@dimen/dim_text_size_15" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>